# stm32_oscilloscope-host

./: CMakeLists.txt  README.md  stm32_oscilloscope-host.cpp
src/: CMakeLists.txt  DataAnalyzer.cpp  DataAnalyzer.hpp  DataRetriever.cpp  DataRetriever.hpp  DisplayHelper.cpp  DisplayHelper.hpp  SettingsWindow.cpp  SettingsWindow.hpp  TextPrinter.hpp  constants.hpp  drawingUtils.hpp  textUtils.hpp  types.hpp  utils.hpp
src/debug/: CMakeLists.txt  StatsForTimemarker.cpp  StatsForTimemarker.hpp  Timemarker.hpp
src/display/: CMakeLists.txt  DisplayHelper.cpp  DisplayHelper.hpp
src/display/utils/: CMakeLists.txt  LineDrawer.cpp  LineDrawer.hpp  TextPrinter.cpp  TextPrinter.hpp  drawingUtils.hpp
src/settingsWindow/: CMakeLists.txt  SettingsWindow.cpp  SettingsWindow.hpp  TriggerControls.hpp  VerticalBoundControls.hpp
src/settingsWindow/controls/: AveragingControls.cpp  AveragingControls.hpp  CMakeLists.txt  CallbackData.hpp  DebugDataControls.cpp  DebugDataControls.hpp  HorizontalResolutionControls.cpp  HorizontalResolutionControls.hpp  MeasurementsControls.cpp  MeasurementsControls.hpp  TemporaryFrequencyControl.hpp  TemporaryFrequencyControls.cpp  TemporaryFrequencyControls.hpp  TriggerControls.cpp  TriggerControls.hpp  (+2 more)
src/sharedData/: CMakeLists.txt  ChannelData.hpp  DynamicData.hpp  GlobalData.hpp  HorizontalMeasurementsData.cpp  HorizontalMeasurementsData.hpp  SignalMeasurementsData.hpp  TimemarkersData.hpp  VerticalBoundsData.cpp  VerticalBoundsData.hpp  VerticalMeasurementsData.cpp  VerticalMeasurementsData.hpp  constants.hpp  types.hpp
(+5 files in other folders)
